--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   teku-prater:
     build:
       context: ./build
+      args:
+        UPSTREAM_VERSION: v21.11.1
     user: root
     image: "teku-prater.teku-prater.dnp.dappnode.eth:0.1.0"
     volumes:
