fixed ports and web3signer name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "teku-prater-data:/opt/teku/data"
     environment:
       HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
-      HTTP_WEB3SIGNER: "http://web3signer.web3signer.dappnode:9003"
+      HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
       INITIAL_STATE: ""
       EXTRA_OPTS: ""
     ports:
