--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
       HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
+      PUBLIC_KEYS_FILE: "/opt/teku/data/public_keys.txt"
       INITIAL_STATE: ""
       EXTRA_OPTS: ""
     ports:
