--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.5"
 services:
-  teku-prater:
+  teku:
     build:
       context: ./build
       args:
         UPSTREAM_VERSION: 22.1.1
     user: root
-    image: "teku-prater.teku-prater.dnp.dappnode.eth:0.1.0"
+    image: "teku.teku-prater.dnp.dappnode.eth:0.1.0"
     volumes:
       - "teku-prater-data:/opt/teku/data"
     environment:
       HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
       HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
-      PUBLIC_KEYS_FILE: "/opt/teku/data/public_keys.txt"
+      PUBLIC_KEYS_FILE: /opt/teku/data/public_keys.txt
       INITIAL_STATE: ""
       EXTRA_OPTS: ""
     ports:
