--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,15 @@ services:
       - "teku-prater-data:/opt/teku/data"
       - "teku-public-keys:/opt/teku/public-keys"
     environment:
-      BEACON_API_PORT: 3500 # Do not change! standard port 3500 for beacon api
+      BEACON_API_PORT: 3500
       HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
       HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
       PUBLIC_KEYS_FILE: /opt/teku/public-keys/public_keys.txt
       INITIAL_STATE: ""
       EXTRA_OPTS: ""
     ports:
-      - "9000/tcp"
-      - "9000/udp"
+      - 9000/tcp
+      - 9000/udp
     restart: unless-stopped
 volumes:
   teku-prater-data: {}
