added License and edit manifest

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -7,9 +7,9 @@
   "shortDescription": "teku-prater",
   "description": "teku-prater",
   "type": "service",
-  "author": "mgarciate <mgarciate@gmail.com> (https://github.com/mgarciate)",
+  "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
   "contributors": ["mgarciate <mgarciate@gmail.com> (https://github.com/mgarciate)"],
-  "categories": ["Blockchain"],
+  "categories": ["Blockchain", "ETH2.0"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ConsenSys/teku.git"
@@ -18,8 +18,10 @@
     "url": "https://github.com/ConsenSys/teku/issues"
   },
   "links": {
+    "ui": "http://ui.web3signer-prater.dappnode?signer_url=http://web3signer.web3signer-prater.dappnode:9000",
     "homepage": "https://docs.teku.consensys.net",
-    "readme": "https://github.com/ConsenSys/teku/blob/master/README.md"
+    "readme": "https://github.com/ConsenSys/teku/blob/master/README.md",
+    "docs": "https://docs.teku.consensys.net"
   },
   "license": "GLP-3.0",
   "requirements": {
