--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,35 @@
 version: "3.5"
 services:
-  teku:
+  beacon-chain: 
     build:
-      context: ./build
+      context: ./beacon-chain
       args:
         BEACON_API_PORT: 3500
         UPSTREAM_VERSION: 22.1.1
-    user: root
-    image: "teku.teku-prater.dnp.dappnode.eth:0.1.0"
+    environment:
+      BEACON_API_PORT: 3500
+      HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
+      EXTRA_OPTS: ""
     volumes:
       - "teku-prater-data:/opt/teku/data"
-      - "teku-public-keys:/opt/teku/public-keys"
-    environment:
-      BEACON_API_PORT: 3500 # Do not change! standard port 3500 for beacon api
-      HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
-      HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
-      PUBLIC_KEYS_FILE: /opt/teku/public-keys/public_keys.txt
-      INITIAL_STATE: ""
-      EXTRA_OPTS: ""
     ports:
       - "9000/tcp"
       - "9000/udp"
     restart: unless-stopped
+  validator:
+    build:
+      context: ./validator
+      args:
+        UPSTREAM_VERSION: 22.1.1
+    user: root
+    environment:
+      BEACON_RPC_GATEWAY_PROVIDER: "beacon-chain.teku-prater.dappnode:3500"
+      HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
+      PUBLIC_KEYS_FILE: /public_keys.txt
+      GRAFFITI: validating_from_DAppNode
+      SUPERVISOR_CONF: /etc/supervisor/conf.d/supervisord.conf
+      INITIAL_STATE: ""
+      EXTRA_OPTS: ""
+    restart: unless-stopped
 volumes:
   teku-prater-data: {}
-  teku-public-keys: {}
