added supervisor config

--- a/validator/Dockerfile
+++ b/validator/Dockerfile
@@ -16,6 +16,9 @@ RUN crontab /etc/cron.d/get-keys-cron
 
 ENV JAVA_OPTS="-Xmx4g"
 
+# Copy supervisor config
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
 COPY entrypoint.sh /usr/bin/entrypoint.sh
 
 ENTRYPOINT [ "entrypoint.sh" ]
