add envs to supervisor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         UPSTREAM_VERSION: 22.3.1
     user: root
     environment:
-      BEACON_RPC_GATEWAY_PROVIDER: "beacon-chain.teku-prater.dappnode:3500"
+      BEACON_NODE_ADDR: "beacon-chain.teku-prater.dappnode:3500"
       HTTP_WEB3SIGNER: "http://web3signer.web3signer-prater.dappnode:9000"
       PUBLIC_KEYS_FILE: /public_keys.txt
       GRAFFITI: validating_from_DAppNode
