--- a/validator/supervisord.conf
+++ b/validator/supervisord.conf
@@ -29,7 +29,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:validator]
 # bash -c: to allow shell features
-command=bash -c "/opt/teku/bin/teku validator-client --network=auto --data-base-path=/opt/teku/data --beacon-node-api-endpoint=%(ENV_BEACON_NODE_ADDR)s --validators-external-signer-url=%(ENV_HTTP_WEB3SIGNER)s --validators-external-signer-public-keys=$(sed -z 's/\n/,/g;s/,$/\n/' /public_keys.txt) --log-destination=CONSOLE %(ENV_EXTRA_OPTS)s"
+command=bash -c "/opt/teku/bin/teku validator-client --network=auto --data-base-path=/opt/teku/data --beacon-node-api-endpoint=%(ENV_BEACON_NODE_ADDR)s --validators-external-signer-url=%(ENV_HTTP_WEB3SIGNER)s --validators-external-signer-public-keys=$(sed -z 's/\n/,/g;s/,$/\n/' /public_keys.txt) --log-destination=CONSOLE --metrics-enabled --metrics-interface 0.0.0.0 --metrics-port 8008 --metrics-host-allowlist=*  %(ENV_EXTRA_OPTS)s"
 priority=1
 autostart=false
 autorestart=true
