setup grafana dashboards
setup teku services in grafana dashboards

set true

setup chain driver

update teku metrics

fix grafana dashboards

set metrics port

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -29,6 +29,11 @@
   "requirements": {
     "minimumDappnodeVersion": "0.2.51"
   },
+  "chain": {
+    "driver": "ethereum-beacon-chain",
+    "serviceName": "beacon-chain",
+    "portNumber": 3500
+  },
   "dependencies": {
     "web3signer-prater.dnp.dappnode.eth": "latest",
     "goerli-geth.dnp.dappnode.eth": "latest"
