--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -4,12 +4,13 @@
   "upstreamVersion": "22.3.2",
   "architectures": ["linux/amd64"],
   "upstreamRepo": "ConsenSys/teku",
-  "shortDescription": "teku-prater",
-  "description": "teku-prater",
+  "shortDescription": "Teku prater ETH2.0 Beacon chain + validator",
+  "description": "Teku prater ETH2.0 Beacon chain + validator",
   "type": "service",
   "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
   "contributors": [
-    "mgarciate <mgarciate@gmail.com> (https://github.com/mgarciate)"
+    "mgarciate <mgarciate@gmail.com> (https://github.com/mgarciate)",
+    "pablomendezroyo <mendez4a@gmail.com> (https://github.com/pablomendezroyo"
   ],
   "categories": ["Blockchain", "ETH2.0"],
   "repository": {
