--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -17,12 +17,13 @@ fields:
     title: Eth1.x node URL
     description: >-
       URL to the Eth1.x node need for the Beacon chain.
-  - id: CHECKPOINT_SYNC_URL
+  - id: checkpointSyncUrl
     target:
       type: environment
       name: CHECKPOINT_SYNC_URL
       service: beacon-chain
-    title: CHECKPOINT_SYNC_URL for fast sync
+    title: Checkpoint for fast sync
     description: >-
-      Check [https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Checkpoint-Start/](https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Checkpoint-Start/)
+      To get Teku up and running in only a few minutes, you can start Teku from a recent finalized checkpoint state rather than syncing from genesis. This is substantially **faster** and consumes **less resources** than syncing from genesis, while still providing all the same features. Be sure you are using a trusted node for the fast sync. Check [Teku docs](https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Checkpoint-Start/)
+      Get your checkpoint sync from [infura](https://infura.io/) (i.e https://XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@eth2-beacon-prater.infura.io)
     required: false
