--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -12,7 +12,7 @@
     "mgarciate <mgarciate@gmail.com> (https://github.com/mgarciate)",
     "pablomendezroyo <mendez4a@gmail.com> (https://github.com/pablomendezroyo"
   ],
-  "categories": ["Blockchain", "ETH2.0"],
+  "categories": ["Blockchain", "ETH2.0", "Prater"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ConsenSys/teku.git"
