--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -15,10 +15,10 @@
   "categories": ["Blockchain", "ETH2.0"],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ConsenSys/teku.git"
+    "url": "git+https://github.com/dappnode/DAppNodePackage-Teku-Prater.git"
   },
   "bugs": {
-    "url": "https://github.com/ConsenSys/teku/issues"
+    "url": "https://github.com/dappnode/DAppNodePackage-Teku-Prater/issues"
   },
   "links": {
     "ui": "http://ui.web3signer-prater.dappnode?signer_url=http://web3signer.web3signer-prater.dappnode:9000",
