--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       BEACON_NODE_ADDR: "http://beacon-chain.teku-prater.dappnode:3500"
       GRAFFITI: validating_from_DAppNode
       EXTRA_OPTS: ""
+      FEE_RECIPIENT_ADDRESS: ""
     restart: unless-stopped
     image: "validator.teku-prater.dnp.dappnode.eth:0.1.0"
 volumes:
