--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -15,10 +15,10 @@
   "categories": ["Blockchain", "ETH2.0"],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ConsenSys/teku.git"
+    "url": "git+https://github.com/dappnode/DAppNodePackage-teku-prater.git"
   },
   "bugs": {
-    "url": "https://github.com/ConsenSys/teku/issues"
+    "url": "https://github.com/dappnode/DAppNodePackage-teku-prater/issues"
   },
   "links": {
     "ui": "http://ui.web3signer-prater.dappnode?signer_url=http://web3signer.web3signer-prater.dappnode:9000",
@@ -26,7 +26,7 @@
     "readme": "https://github.com/ConsenSys/teku/blob/master/README.md",
     "docs": "https://docs.teku.consensys.net"
   },
-  "license": "GLP-3.0",
+  "license": "GPL-3.0",
   "requirements": {
     "minimumDappnodeVersion": "0.2.51"
   },
