--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -36,7 +36,9 @@
     "portNumber": 3500
   },
   "dependencies": {
-    "web3signer-prater.dnp.dappnode.eth": "latest",
-    "goerli-geth.dnp.dappnode.eth": "latest"
+    "web3signer-prater.dnp.dappnode.eth": "latest"
+  },
+  "warnings": {
+    "onRemove": "Make sure your web3signer does not have this client selected or you will stop validating! (Packages > web3signer > config > client)"
   }
 }
