--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -26,7 +26,7 @@
     "readme": "https://github.com/ConsenSys/teku/blob/master/README.md",
     "docs": "https://docs.teku.consensys.net"
   },
-  "license": "GPL-3.0",
+  "license": "Apache-2.0",
   "requirements": {
     "minimumDappnodeVersion": "0.2.51"
   },
