Remove this lane
This lane makes not sense, now the port is another, and this port is exposed to the network and even out of the network of the container by using the network keyword of the docker-compose

--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -18,6 +18,6 @@ COPY entrypoint.sh /usr/bin/entrypoint.sh
 # API port: https://docs.teku.consensys.net/en/latest/Reference/CLI/CLI-Syntax/#rest-api-port
 EXPOSE $BEACON_API_PORT
 # P2P port: https://docs.teku.consensys.net/en/latest/Reference/CLI/CLI-Syntax/#p2p-port
-EXPOSE 9000
+#EXPOSE 9000
 
 ENTRYPOINT [ "entrypoint.sh" ]
