--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,14 @@ services:
     environment:
       BEACON_API_PORT: 3500
       HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
+      P2P_PORT: 9505
       CHECKPOINT_SYNC_URL: ""
       EXTRA_OPTS: ""
     volumes:
       - "teku-prater-data:/opt/teku/data"
     ports:
-      - 9000/tcp
-      - 9000/udp
+      - "9505:9505/tcp"
+      - "9505:9505/udp"
     restart: unless-stopped
     image: "beacon-chain.teku-prater.dnp.dappnode.eth:0.1.0"
   validator:
