--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         UPSTREAM_VERSION: 22.7.0
     environment:
       BEACON_API_PORT: 3500
-      HTTP_WEB3PROVIDER: "http://goerli-geth.dappnode:8545"
+      HTTP_ENGINE: "http://goerli-geth.dappnode:8551"
       P2P_PORT: 9505
       CHECKPOINT_SYNC_URL: ""
       EXTRA_OPTS: ""
