--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -38,5 +38,8 @@
   "warnings": {
     "onRemove": "Make sure your web3signer does not have this client selected or you will stop validating! (Packages > web3signer > config > client)"
   },
-  "globalEnvs": [{ "envs": ["EXECUTION_CLIENT_PRATER", "MEVBOOST_PRATER"], "services": ["beacon-chain"] }]
+  "globalEnvs": [
+    { "envs": ["EXECUTION_CLIENT_PRATER", "MEVBOOST_PRATER"], "services": ["beacon-chain"] },
+    { "envs": ["MEVBOOST_PRATER"], "services": ["validator"] }
+  ]
 }
