--- a/beacon-chain/Dockerfile
+++ b/beacon-chain/Dockerfile
@@ -6,6 +6,8 @@ ARG UPSTREAM_VERSION
 # IMPORTANT!: this docker image has a root user with password. Cannot execute apt update and apt install
 FROM consensys/teku:$UPSTREAM_VERSION
 
+RUN apt update && apt install curl --yes
+
 # Give proper permissions to docker volume https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Installation-Options/Run-Docker-Image/#allow-multiple-users-to-run-the-docker-image
 USER root
 RUN mkdir -p /opt/teku/data
