align with mainnet version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,11 @@ services:
         UPSTREAM_VERSION: 22.9.0
     environment:
       BEACON_API_PORT: 3500
-      HTTP_ENGINE: "http://goerli-geth.dappnode:8551"
-      P2P_PORT: 9505
+      HTTP_ENGINE: ""
       CHECKPOINT_SYNC_URL: ""
+      P2P_PORT: 9505
       EXTRA_OPTS: ""
+      FEE_RECIPIENT_ADDRESS: ""
     volumes:
       - "teku-prater-data:/opt/teku/data"
     ports:
