--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -33,7 +33,7 @@ fields:
     target:
       type: environment
       name: FEE_RECIPIENT_ADDRESS
-      service: validator
+      service: [beacon-chain, validator]
     title: Fee Recipient Address
     description: >-
       Fee Recipient is a feature that lets you specify a priority fee recipient address on your validator client instance and beacon node. After The Merge, execution clients will begin depositing priority fees into this address whenever your validator client proposes a new block.
