--- a/setup-wizard.yml
+++ b/setup-wizard.yml
@@ -9,6 +9,32 @@ fields:
     maxLength: 32
     description: >-
       Add a string to your proposed blocks, which will be seen on the block explorer
+  - id: HTTP_ENGINE
+    required: true
+    target:
+      type: environment
+      name: HTTP_ENGINE
+      service: beacon-chain
+    title: Execution Client Endpoint
+    description: >-
+      The Consensus Clients (Lighthouse, Nimbus, Prysm, and Teku) require access to an Execution Client to receive the execution payload by using the Engine API of the Execution Client.
+      This endpoint MUST be provided for an Execution Client that is run locally. 
+      IT IS NO LONGER POSSIBLE TO USE INFURA OR ANY OTHER SERVICE PROVIDER AS YOUR EXECUTION CLIENT.
+
+      - Goerli Geth [Install link](http://my.dappnode/#/installer/goerli-geth.dnp.dappnode.eth)
+
+      - Goerli Nethermind [Install link](http://my.dappnode/#/installer/goerli-nethermind.dnp.dappnode.eth)
+
+      - Goerli Erigon [Install link](http://my.dappnode/#/installer/goerli-erigon.dnp.dappnode.eth)
+
+
+      Consensus Clients require access to an Execution Client in order to operate properly.
+      Be sure to only select an Execution Client below that you have already installed.
+    enum:
+      - "http://goerli-geth.dappnode:8551"
+      - "http://nethermind-goerli.dappnode:8551"
+      - "http://goerli-erigon.dappnode:8551"
+      
   - id: checkpointSyncUrl
     target:
       type: environment
@@ -16,17 +42,18 @@ fields:
       service: beacon-chain
     title: Checkpoint for fast sync
     description: >-
-      To get Teku up and running in only a few minutes, you can start Teku from a recent finalized checkpoint state rather than syncing from genesis. This is substantially **faster** and consumes **less resources** than syncing from genesis, while still providing all the same features. Be sure you are using a trusted node for the fast sync. Check [Teku docs](https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Checkpoint-Start/)
-      Get your checkpoint sync from [infura](https://infura.io/) (i.e https://XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@eth2-beacon-prater.infura.io)
+      To get Teku up and running in only a few minutes, you can start Teku from a recent finalized checkpoint state rather than syncing from genesis. This is substantially **faster** and consumes **less resources** than syncing from genesis, while still providing all the same features. Be sure you are using a trusted node for the fast sync. Check the [Teku docs](https://docs.teku.consensys.net/en/latest/HowTo/Get-Started/Checkpoint-Start/) for more information.
+      Use the Dappnode Official endpoint `https://checkpoint-sync-prater.dappnode.io` or get your checkpoint sync from [Infura](https://infura.io/) (i.e https://XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@eth2-beacon-prater.infura.io)
+      *Note - If you are going to provide your own checkpoint sync endpoint, make sure you do not use a slash `/` at the end of the URL.*
     required: false
   - id: feeRecipientAddress
     target:
       type: environment
-      name: FEE_RECIPIENT_ADDRESS
+      name: DEFAULT_FEE_RECIPIENT
       service: [beacon-chain, validator]
     title: Fee Recipient Address
     description: >-
-      Fee Recipient is a feature that lets you specify a priority fee recipient address on your validator client instance and beacon node. After The Merge, execution clients will begin depositing priority fees into this address whenever your validator client proposes a new block.
+      Fee Recipient is a feature that lets you specify a priority fee recipient address on your validator client instance and beacon node. Make sure this is an address you control. After The Merge, Execution Clients will begin depositing priority fees into this address whenever your validator proposes a new block.
     required: true
     pattern: "^0x[a-fA-F0-9]{40}$"
     patternErrorMessage: Must be a valid address (0x1fd16a...)
