--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,7 +1,7 @@
 {
   "name": "teku-prater.dnp.dappnode.eth",
   "version": "0.1.0",
-  "upstreamVersion": "22.9.0",
+  "upstreamVersion": "22.9.1-RC1",
   "architectures": ["linux/amd64"],
   "upstreamRepo": "ConsenSys/teku",
   "shortDescription": "Teku prater ETH2.0 Beacon chain + validator",
@@ -39,7 +39,13 @@
     "onRemove": "Make sure your web3signer does not have this client selected or you will stop validating! (Packages > web3signer > config > client)"
   },
   "globalEnvs": [
-    { "envs": ["EXECUTION_CLIENT_PRATER", "MEVBOOST_PRATER"], "services": ["beacon-chain"] },
-    { "envs": ["MEVBOOST_PRATER"], "services": ["validator"] }
+    {
+      "envs": ["EXECUTION_CLIENT_PRATER", "MEVBOOST_PRATER"],
+      "services": ["beacon-chain"]
+    },
+    {
+      "envs": ["MEVBOOST_PRATER"],
+      "services": ["validator"]
+    }
   ]
 }
