The new env vars
Two env vars are required to do the exit:
1. Avoid human mistakes: On this way the user MUST type that frase in order to execute the command of exit
2. public keys: the user must define what public keys he want to remove

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "9505:9505/tcp"
       - "9505:9505/udp"
     restart: unless-stopped
-    image: "beacon-chain.teku-prater.dnp.dappnode.eth:0.1.0"
+    image: "beacon-chain.teku-prater.dnp.dappnode.eth:0.1.11"
   validator:
     build:
       context: ./validator
@@ -28,8 +28,10 @@ services:
       BEACON_NODE_ADDR: "http://beacon-chain.teku-prater.dappnode:3500"
       GRAFFITI: validating_from_DAppNode
       EXTRA_OPTS: ""
+      EXIT_VALIDATOR: ""
+      KEYSTORES_VOLUNTARY_EXIT: ""
       FEE_RECIPIENT_ADDRESS: ""
     restart: unless-stopped
-    image: "validator.teku-prater.dnp.dappnode.eth:0.1.0"
+    image: "validator.teku-prater.dnp.dappnode.eth:0.1.11"
 volumes:
   teku-prater-data: {}
