--- a/releases.json
+++ b/releases.json
@@ -1,8 +1,8 @@
 {
   "0.1.0": {
-    "hash": "/ipfs/QmRqp4aezVQbivyREJopXj3Lxiw97jXA2q8PKX6RWc83dH",
+    "hash": "/ipfs/QmdqDKFFJNMHS39xNVXppEjLtvVBMAmdacnwQc1Sa23h6W",
     "uploadedTo": {
-      "http://172.33.1.5:5001": "Thu, 03 Feb 2022 13:09:30 GMT"
+      "dappnode": "Fri, 23 Sep 2022 00:55:08 GMT"
     }
   }
 }
