--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -2,7 +2,7 @@
   "name": "teku-prater.dnp.dappnode.eth",
   "version": "0.1.0",
   "upstreamVersion": "22.9.1",
-  "architectures": ["linux/amd64"],
+  "architectures": ["linux/amd64", "linux/arm64"],
   "upstreamRepo": "ConsenSys/teku",
   "shortDescription": "Teku Prater Beacon chain + validator",
   "description": "Teku implementation of Prater Beacon chain + validator",
