Remove unused jq

--- a/validator/Dockerfile
+++ b/validator/Dockerfile
@@ -6,12 +6,13 @@ ARG UPSTREAM_VERSION
 FROM consensys/teku:$UPSTREAM_VERSION
 
 USER root 
-RUN apt update && apt install curl jq ca-certificates --yes
-
-ENV JAVA_OPTS="-Xmx5g"
 
 COPY /security/validator-api-bearer /opt/teku/data/validator/key-manager/validator-api-bearer 
 COPY /security/cert /cert
 COPY entrypoint.sh /usr/bin/entrypoint.sh
+
+RUN apt-get update && apt-get install ca-certificates --yes 
+
+ENV JAVA_OPTS="-Xmx5g"
 
 ENTRYPOINT [ "entrypoint.sh" ]
